--- a/main.html
+++ b/main.html
@@ -7,10 +7,12 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div id=main-container>
+		<h1>Testimonials</h1>
+		<p class="testimonial">This product is amazing. <span> -john doe</span></p>
+		<p class="testimonial second">This product is amazing.<span> -john doe</span></p>
+	</div>
+	
 </body>
 
 </html>
