--- a/main.html
+++ b/main.html
@@ -9,9 +9,15 @@
 <body>
 	<div id=main-container>
 		<h1>Testimonials</h1>
-		<p class="testimonial">This product is amazing. <span> -john doe</span></p>
-		<p class="testimonial second">This product is amazing.<span> -john doe</span></p>
-	</div>
+		<div class="testimonial">
+		<p >This product is amazing.</p>
+		<span class="author"> -john doe</span>
+		</div>
+		<div class= " testimonial second">
+		<p>This product is amazing.</p>
+		<span class="author"> -john doe</span>
+		</div>
+		</div>
 	
 </body>
 
