--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
 		<h1>Testimonials</h1>
 		<div class="testimonial">
 		<p >This product is amazing.</p>
-		<span class="author"> -john doe</span>
+		<p class="author"> -john doe</p>
 		</div>
 		<div class= " testimonial second">
 		<p>This product is amazing.</p>
-		<span class="author"> -john doe</span>
+		<p class="author"> -john doe</p>
 		</div>
 		</div>
 	
